[package]
name = "hexpds_k256_internal"
version = "0.1.0"
authors = ["NetWatchInc"]
edition = "2021"

[lib]
name = "hexpds_k256_internal"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
atoms = "2.2.3"
elliptic-curve = "0.13.8"
hex = "0.4.3"
k256 = "0.13.3"
rustler = "0.33.0"
[features]
"ecdsa" = ["k256/ecdsa"]
"arithmetic" = ["k256/arithmetic"]
