[package]
name = "hipdster_dagcbor_internal"
version = "0.1.0"
authors = [ "NetWatchInc" ]
edition = "2021"

[lib]
name = "hipdster_dagcbor_internal"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
libipld = "0.16.0"
rustler = "0.32.0"
serde_ipld_dagcbor = "0.5.0"
serde_json = "1.0.113"
[features]
"preserve_order" = []
